--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<header>
-		<h1>Welcome to My Personal Webpage</h1>
+		<h1>Mason James</h1>
 	</header>
 	<main>
 		<section>
@@ -16,7 +16,7 @@
 		<section>
 			<h2>University of Iowa</h2>
 			<img src="iowa.jpeg" alt="Univeristy">
-			<img src="Unknown.jpeg" alt="Photo 2">
+			<img src="ski2.jpg" alt="Photo 2">
 		</section>
 		<section>
 			<h2>My Contacts</h2>
@@ -24,7 +24,7 @@
 			<ul>
 				<li><a href="https://www.linkedin.com/in/mason-james-43687521b/">LinkedIn</a></li>
 				<li><a href="[Link to Your Twitter]">952-454-3062</a></li>
-				<li><a href="holder">Resume</a></li>
+				<li><a href="./Resume.html">Resume</a></li>
 			</ul>
 		</section>
 		<section>
