--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
 			<p>You can reach me via email at masonjjames@gmail.com or reference the following:</p>
 			<ul>
 				<li><a href="https://www.linkedin.com/in/mason-james-43687521b/">LinkedIn</a></li>
-				<li><a href="[Link to Your Twitter]">952-454-3062</a></li>
+				<li><a href="https://en.wikipedia.org/wiki/Telephone_number">952-454-3062</a></li>
 				<li><a href="./Resume.html">Resume</a></li>
 			</ul>
 		</section>
